Changed the way the navigation draw behaves to have percistance in the fragments added a hunt view screen showing a hunt, still needs to be connected to the database but for now, can be accessed from hunt creation screen.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,11 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <activity
+            android:name=".ViewHunt"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
