--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.android.gms:play-services:9.8.0'
     testCompile 'junit:junit:4.12'
+    // CardView and RecycleView
+    compile 'com.android.support:cardview-v7:25.0.+'
+    compile 'com.android.support:recyclerview-v7:25.0.+'
+
+    // Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
