--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,11 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.android.support:cardview-v7:25.0.+'
+    compile 'com.android.support:recyclerview-v7:+'
+
+
+
     testCompile 'junit:junit:4.12'
 }
